syntax = "proto2";
import "wallet_routes.proto";

service StoreRoutes {
    rpc GetPrice(Store) returns (Store) {}
    rpc Sell(Order) returns (TransferResponse) {}
    rpc CloseUp(Store) returns (Store) {}
}

message Store {
    required string id = 1;
    optional int32 price = 2;
    optional int32 balance = 3;
}

message Order {
    required string paying_wallet_id = 2;
}